--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 24ccc29
+	base = 07a30ca
 	trimbase = 
 	parent = release/hydro/pololu_smc_driver
-	previous = 
+	previous = 24ccc29
