--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 394974d
+	base = 701a512
 	trimbase = 
 	parent = debian/hydro/pololu_smc_driver
-	previous = 
+	previous = 394974d
