--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 71fbe01
+	base = 52400e9
 	trimbase = 
 	parent = release/indigo/pololu_smc_driver
-	previous = 
+	previous = 71fbe01
