--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ec3cf4d
+	base = 712eeb2
 	trimbase = 
 	parent = debian/indigo/pololu_smc_driver
-	previous = 
+	previous = ec3cf4d
